--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@
 body {
   font-family: "Poppins", sans-serif;
   background-color: var(--bg);
-  color: #22c5c9;
+  color: #503417;
+  min-height: 2000px;
 }
 
 /* navbar */
@@ -25,8 +26,8 @@ nav {
   display: flex;
   align-content: center;
   justify-content: space-between;
-  padding: 1.4rem 7%;
-  background-color: #99dadf;
+  padding: 1.2rem 7%;
+  background-color: #55aec7;
   border-bottom: 1px solid var(--primary);
   position: fixed;
   top: 0;
@@ -38,7 +39,7 @@ nav {
 .logo-icon {
   font-size: 2rem;
   font-weight: 700;
-  color: #22aea8;
+  color: #2c6d93;
 }
 
 .logo-icon span {
@@ -49,7 +50,7 @@ nav {
   color: #f0f7e9;
   display: inline-block;
   font-size: 1.3rem;
-  margin: 0.1rem;
+  margin: 0 1rem;
 }
 
 .nav-item a:hover {
@@ -82,6 +83,73 @@ nav {
   display: none;
 }
 
+/* hero section */
+.hero {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background-image: url("../img/1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.hero::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 8%;
+  bottom: 0;
+  background: linear-gradient(0deg, #ebe1d7 3%, rgba(255, 255, 255, 0) 50%);
+}
+
+.hero .content {
+  padding: 1.4rem 7%;
+  max-width: 60rem;
+}
+
+.hero .content h1 {
+  font-size: 5rem;
+  color: #f0f7e9;
+  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  line-height: 1.2;
+}
+
+.hero .content h1 span {
+  color: var(--primary);
+}
+
+.hero .content p {
+  font-size: 1.6rem;
+  margin-top: 1rem;
+  line-height: 1.4;
+  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  mix-blend-mode: difference;
+}
+
+.hero .content .cta {
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 1rem 3rem;
+  font-size: 1.4rem;
+  color: #c09d69;
+  background-color: var(--primary);
+  border-radius: 0.5rem;
+  box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+}
+
+/* about section */
+.about {
+  padding: 8rem 7% 1.4rem;
+}
+
+.about h2 {
+  font-size: 2.6rem;
+  margin-bottom: 3rem;
+}
+
 /* Media Queries */
 
 /* Laptop */
@@ -97,11 +165,11 @@ nav {
     font-size: 62.5%;
   }
 
-  #hamburger-menu{
+  #hamburger-menu {
     display: inline-block;
   }
 
-  .nav-item{
+  .nav-item {
     position: absolute;
     top: 100%;
     right: -100%;
@@ -110,7 +178,7 @@ nav {
     height: 100vh;
   }
 
-  .nav-item.active{
+  .nav-item.active {
     right: 0;
   }
 }
@@ -120,14 +188,6 @@ nav {
   html {
     font-size: 55%;
   }
-}
-
-/* banner */
-.banner-img {
-  height: 300px;
-  background-image: url(https://cdn.pixabay.com/photo/2024/05/26/10/15/bird-8788491_1280.jpg);
-  background-size: cover;
-  background-position: center;
 }
 
 .profile-container {
