--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ nav {
   z-index: 9999;
 }
 
+.image img {
+  width: 30px;
+}
+
 .logo-icon {
   font-size: 2rem;
   font-weight: 700;
@@ -47,6 +51,7 @@ nav {
 }
 
 .nav-item a {
+  position: relative;
   color: #f0f7e9;
   display: inline-block;
   font-size: 1.3rem;
@@ -85,14 +90,13 @@ nav {
 
 /* hero section */
 .hero {
+  width: 100%;
   min-height: 100vh;
+  /* place-items: center; */
+  flex-direction: column;
   display: flex;
-  align-items: center;
-  background-image: url("../img/1.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   position: relative;
+  justify-content: center;
 }
 
 .hero::after {
@@ -106,12 +110,14 @@ nav {
 }
 
 .hero .content {
+  z-index: 9999;
   padding: 1.4rem 7%;
   max-width: 60rem;
 }
 
 .hero .content h1 {
-  font-size: 5rem;
+  font-size: 59px;
+  font-weight: 700;
   color: #f0f7e9;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
   line-height: 1.2;
@@ -121,7 +127,7 @@ nav {
   color: var(--primary);
 }
 
-.hero .content p {
+.content p {
   font-size: 1.6rem;
   margin-top: 1rem;
   line-height: 1.4;
@@ -140,12 +146,55 @@ nav {
   box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
 }
 
+.hero img {
+  z-index: 000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.hero .slider-navigation {
+  z-index: 99999;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(390px);
+  margin-bottom: 12px;
+}
+
+.hero .slider-navigation .slider {
+  width: 12px;
+  height: 12px;
+  background: #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+  transition: 0.3 ease;
+}
+
+.hero .slider-navigation .slider.active {
+  background: black;
+}
+
+.hero .slider-navigation .slider:not(:last-child) {
+  margin-right: 20px;
+}
+
+.hero .slider-navigation .slider:hover {
+  transform: scale(1.2);
+}
+
 /* about section */
 .about {
   padding: 8rem 7% 1.4rem;
 }
 
 .about h2 {
+  text-align: center;
   font-size: 2.6rem;
   margin-bottom: 3rem;
 }
@@ -168,7 +217,6 @@ nav {
   #hamburger-menu {
     display: inline-block;
   }
-
   .nav-item {
     position: absolute;
     top: 100%;
@@ -176,10 +224,27 @@ nav {
     background-color: white;
     width: 30rem;
     height: 100vh;
+    transition: 0.3s;
   }
 
   .nav-item.active {
     right: 0;
+  }
+
+  .nav-item a {
+    color: var(--bg);
+    display: block;
+    margin: 1.5rem;
+    padding: 0.5rem;
+    font-size: 2rem;
+  }
+
+  .nav-item a::after {
+    transform-origin: 0 0;
+  }
+
+  .nav-item a:hover::after {
+    transform: scaleX(0.2);
   }
 }
 
