--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ nav {
 }
 
 .hero .content {
-  z-index: 9999;
+  z-index: 999;
   padding: 1.4rem 7%;
   max-width: 60rem;
 }
@@ -157,7 +157,7 @@ nav {
 }
 
 .hero .slider-navigation {
-  z-index: 99999;
+  z-index: 999;
   position: relative;
   display: flex;
   justify-content: center;
@@ -272,4 +272,77 @@ nav {
   background-position: center;
   border-radius: 50%;
   width: 50px;
+}
+
+
+/* Message Us */
+#message {
+  padding: 8rem 7% 1.5rem;
+}
+
+.form-container {
+  display: flex;
+  gap: 5rem;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.form {
+  width: 350px;
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  margin-right: 50px;
+  display: flex;
+}
+
+form input[type="text"],
+form input[type="date"],
+form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+form input[type="radio"] {
+  margin: 0 5px 0 10px;
+}
+
+form label {
+  margin-right: 20px;
+}
+
+form input[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+form input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.output-form {
+  width: 300px;
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+
+.output-form p {
+  margin: 10px 0;
+}
+
+.output-form span {
+  font-weight: bold;
 }
