--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
-/* ini css */
-
 :root {
-  --primary: #f1dec6;
-  --bg: #ebe1d7;
+  --primary: #8fbc8f; /* Warna hijau daun */
+  --secondary: #f0e3d4; /* Warna beige lembut */
+  --accent: #6b8e23; /* Warna hijau zaitun */
+  --background: #f9f9f9; /* Warna latar belakang terang */
+  --text-color: #333; /* Warna teks gelap */
+  --dark-primary: #115a91; /* Warna biru gelap untuk footer */
+  --light-primary: #e0f2f1; /* Warna hijau muda untuk elemen latar belakang */
+  --light-secondary: #f1f8e9; /* Warna beige muda untuk elemen */
 }
 
 * {
@@ -16,13 +20,14 @@
 }
 
 body {
-  background-color: var(--bg);
-  color: #503417;
-  /* min-height: 2000px; */
+  background-color: var(--background);
+  color: var(--text-color);
+  min-height: 2000px;
 }
 
-/* navbar */
+/* Navbar */
 header {
+  background-color: var(--dark-primary);
   z-index: 999;
   position: absolute;
   top: 0;
@@ -38,52 +43,52 @@ header {
 header .logo-icon {
   font-size: 2rem;
   font-weight: 700;
-  color: #2c6d93;
+  color: var(--primary);
   text-transform: uppercase;
 }
 
 header .logo-icon span {
-  color: #f0f7e9;
+  color: var(--secondary);
 }
 
 header .navigation {
   position: relative;
 }
 
-header .navigation .nav-item a {
+header .navigation .navigation-items a {
   position: relative;
-  color: #f0f7e9;
+  color: var(--secondary);
   font-size: 1.3rem;
   margin-left: 30px;
   font-weight: 500;
-  transition: 0.3 ease;
+  transition: 0.3s ease;
 }
 
-header .navigation .nav-item a:hover {
-  color: var(--primary);
-}
-
-header .navigation .nav-item a::after {
+header .navigation .navigation-items a:before {
   content: "";
-  display: block;
-  padding-bottom: 0.5rem;
-  border-bottom: 0.1rem solid var(--primary);
-  transform: scaleX(0);
-  transition: 0.2s linear;
+  position: absolute;
+  background: var(--primary);
+  width: 0;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  transition: 0.3s ease;
 }
 
-header .navigation .nav-item a:hover::after {
-  transform: scaleX(0.5);
+header .navigation .navigation-items a:hover:before {
+  width: 100%;
 }
 
-/* hero section */
+/* Hero Section */
 .home {
   width: 100%;
   min-height: 100vh;
-  flex-direction: column;
   display: flex;
-  position: relative;
   justify-content: center;
+  align-items: center;
+  position: relative;
+  background: var(--light-primary);
+  flex-direction: column;
 }
 
 .home::after {
@@ -93,45 +98,57 @@ header .navigation .nav-item a:hover::after {
   width: 100%;
   height: 8%;
   bottom: 0;
-  background: linear-gradient(0deg, #ebe1d7 3%, rgba(255, 255, 255, 0) 50%);
+  background: linear-gradient(
+    0deg,
+    var(--light-secondary) 3%,
+    rgba(255, 255, 255, 0) 50%
+  );
+}
+
+.home:before {
+  z-index: 777;
+  content: "";
+  position: absolute;
+  background: rgba(3, 96, 251, 0.3);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 .home .content {
   z-index: 888;
   padding: 1.4rem 7%;
-  max-width: 60rem;
+  max-width: 600rem;
+  display: none;
+  color: var(--secondary);
+}
+
+.home .content.active {
+  display: block;
 }
 
 .home .content h1 {
   font-size: 59px;
   font-weight: 700;
-  color: #f0f7e9;
+  color: var(--primary);
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
   line-height: 1.2;
 }
 
-.home .content h1 span {
-  color: var(--primary);
-}
-
 .home .content p {
-  font-size: 1.6rem;
-  margin-top: 1rem;
-  line-height: 1.4;
-  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
-  mix-blend-mode: difference;
+  margin-bottom: 50px;
+  color: var(--light-secondary);
 }
 
-.home .content .cta {
-  transition: 0.5 ease;
-  margin-top: 1rem;
-  display: inline-block;
-  padding: 1rem 3rem;
-  font-size: 1.4rem;
-  color: #c09d69;
-  background-color: var(--primary);
-  border-radius: 0.5rem;
-  box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+.home .content a {
+  background: var(--primary);
+  padding: 15px 35px;
+  color: #fff;
+  font-size: 1.1em;
+  font-weight: 500;
+  text-decoration: none;
+  border-radius: 2px;
 }
 
 .home img {
@@ -144,47 +161,279 @@ header .navigation .nav-item a:hover::after {
   object-fit: cover;
 }
 
-.hero .slider-navigation {
+.slider-navigation {
   z-index: 888;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  transform: translateY(390px);
+  transform: translateY(80px);
   margin-bottom: 12px;
 }
 
-.hero .slider-navigation .nav-btn {
+.slider-navigation .nav-btn {
   width: 12px;
   height: 12px;
-  background: #ffffff;
+  background: var(--primary);
   border-radius: 50%;
   cursor: pointer;
   box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
-  transition: 0.3 ease;
+  transition: 0.3s ease;
 }
 
-.hero .slider-navigation .nav-btn.active {
-  background: black;
+.slider-navigation .nav-btn.active {
+  background: var(--accent);
 }
 
-.hero .slider-navigation .nav-btn:not(:last-child) {
+.slider-navigation .nav-btn:not(:last-child) {
   margin-right: 20px;
 }
 
-.hero .slider-navigation .nav-btn:hover {
+.slider-navigation .nav-btn:hover {
   transform: scale(1.2);
 }
 
-/* about section */
-.about {
-  padding: 8rem 7% 1.4rem;
+.img-slide {
+  position: absolute;
+  width: 100%;
+  opacity: 0;
+  transition: opacity 1s ease;
 }
 
-.about h2 {
+.img-slide.active {
+  opacity: 1;
+}
+
+/* Form */
+#help {
+  padding: 2rem;
+}
+
+#help h2 {
   text-align: center;
   font-size: 2.6rem;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
+  color: var(--primary);
+}
+
+.form-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  max-width: 1200px;
+  margin: 0 auto;
+  gap: 2rem;
+}
+
+.form {
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  flex: 1;
+  min-width: 300px;
+}
+
+.form label {
+  display: block;
+  margin: 0.5rem 0;
+  font-weight: bold;
+}
+
+.form input[type="text"],
+.form input[type="date"],
+.form textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.form input[type="radio"] {
+  margin-right: 5px;
+}
+
+.form input[type="submit"] {
+  background-color: var(--primary);
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.form input[type="submit"]:hover {
+  background-color: var(--accent);
+}
+
+.output-form {
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  flex: 1;
+  min-width: 300px;
+}
+
+.output-form p {
+  background-color: var(--light-secondary);
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  margin: 10px 0;
+}
+
+.output-form span {
+  font-weight: bold;
+}
+
+/* Footer */
+footer {
+  background-color: var(--dark-primary);
+  color: #fff;
+  padding: 2rem 7%;
+  text-align: center;
+}
+
+.footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-content p {
+  margin: 0;
+  font-size: 1rem;
+}
+
+.footer-content a:hover {
+  text-decoration: underline;
+}
+
+/* article */
+.art h2 {
+  padding: 4rem 7%;
+  text-align: center;
+  font-size: 2.6rem;
+  margin-bottom: 2rem;
+  color: var(--primary);
+}
+
+.article-section {
+  justify-content: space-around;
+  padding: 4rem 7%;
+  background-color: #ffffff;
+  max-width: 1200px;
+  margin: 0 auto;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.article-container {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  margin-bottom: 2rem;
+}
+
+.article-img {
+  flex: 1;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.article-img img {
+  width: 200px;
+  height: auto;
+  object-fit: cover;
+}
+
+.article-text {
+  flex: 2;
+  text-align: left;
+}
+
+.article-text h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: #333;
+}
+
+.article-text p {
+  font-size: 1rem;
+  color: #666;
+  line-height: 1.6;
+}
+
+/* Galeri Destinasi */
+#destinasi {
+  padding: 4rem 7%;
+  text-align: center;
+}
+
+#destinasi h2 {
+  font-size: 2.6rem;
+  margin-bottom: 2rem;
+  color: var(--primary);
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1rem;
+}
+
+.gallery-item {
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: opacity 0.3s ease;
+}
+
+.gallery-item:hover img {
+  opacity: 0.8;
+}
+
+.gallery-info {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  padding: 1rem;
+  text-align: left;
+  transform: translateY(100%);
+  transition: transform 0.3s ease;
+}
+
+.gallery-item:hover .gallery-info {
+  transform: translateY(0);
+}
+
+.gallery-info h3 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.gallery-info p {
+  font-size: 1rem;
 }
 
 /* Media Queries */
@@ -223,18 +472,18 @@ header .navigation .nav-item a:hover::after {
   }
 
   header .navigation .navigation-items a {
-    color: #222;
+    color: #ffffff;
     font-size: 1.2em;
     margin: 20px;
   }
 
-  header .navigation .navigation-items a:before {
-    background: #222;
-    height: 5px;
+  header .navigation .navigation-items a:after {
+    background: #ffffff;
+    height: 1px;
   }
 
   header .navigation.active .navigation-items {
-    background: #fff;
+    background: #ffffff17;
     width: 600px;
     max-width: 600px;
     margin: 20px;
@@ -263,37 +512,44 @@ header .navigation .nav-item a:hover::after {
     background-position: right;
     transition: 0.3s ease;
   }
-}
+  .article-section {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
 
-@media (max-width: 560px) {
-  .home .content h1 {
-    font-size: 3em;
-    line-height: 60px;
+  .article-section .article-img {
+    max-width: 80%;
+    margin-bottom: 1.5rem;
+  }
+
+  .article-section .article-text {
+    text-align: center;
   }
 }
 
 /* Mobile */
-@media (max-width: 450px) {
+@media (max-width: 550px) {
   html {
     font-size: 55%;
   }
-}
 
-.profile-container {
-  display: flex;
-  justify-content: space-around;
-}
+  .home .content h1 {
+    font-size: 3em;
+    line-height: 60px;
+  }
 
-.profile-item {
-  height: 100px;
-  text-align: center;
-}
+  .form-container {
+    flex-direction: column;
+    gap: 1rem;
+  }
 
-.profile-img {
-  height: 50px;
-  background-image: url(https://cdn.pixabay.com/photo/2023/11/09/19/36/zoo-8378189_1280.jpg);
-  background-size: cover;
-  background-position: center;
-  border-radius: 50%;
-  width: 50px;
+  .form {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .output-form {
+    margin-top: 0;
+  }
 }
