--- a/css/style.css
+++ b/css/style.css
@@ -323,49 +323,35 @@ footer {
 }
 
 .article-section {
-  justify-content: space-around;
-  padding: 4rem 7%;
-  background-color: #ffffff;
-  max-width: 1200px;
-  margin: 0 auto;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 20px;
 }
 
-.article-container {
+.article {
   display: flex;
   flex-direction: row;
-  gap: 2rem;
-  margin-bottom: 2rem;
+  background-color: #f2f2f2;
+  margin: 10px;
+  padding: 15px;
+  border-radius: 5px;
+  width: calc(50% - 20px); 
+  box-sizing: border-box; 
 }
 
-.article-img {
-  flex: 1;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.article-img img {
-  width: 200px;
-  height: auto;
-  object-fit: cover;
+.article-image {
+  width: 45%; 
+  height: auto; 
+  object-fit: cover; 
+  margin-right: 10px;
 }
 
 .article-text {
-  flex: 2;
-  text-align: left;
+  flex: 1;
 }
-
 .article-text h2 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-  color: #333;
-}
-
-.article-text p {
-  font-size: 1rem;
-  color: #666;
-  line-height: 1.6;
+  color: #8fbc8f;
 }
 
 /* Galeri Destinasi */
@@ -512,19 +498,14 @@ footer {
     background-position: right;
     transition: 0.3s ease;
   }
-  .article-section {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+  .article {
+    flex-direction: column; /* Gambar di atas, teks di bawah */
+    width: 80%; /* Lebar artikel lebih besar di tablet */
   }
 
-  .article-section .article-img {
-    max-width: 80%;
-    margin-bottom: 1.5rem;
-  }
-
-  .article-section .article-text {
-    text-align: center;
+  .article-image {
+    width: 100%; /* Gambar memenuhi lebar artikel */
+    margin: 0 0 10px 0; /* Margin bawah gambar */
   }
 }
 
